load external scripts

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     var lib_url = ( /^\.\//.test(class_name)        ||  // ^./
                                     /^\/\//.test(class_name)        ||  //^//
                                     /^\//.test(class_name)          ||  //^/
-                                    /^[a-z+]:\/\//.test(class_name)     //^[a-z+]:\/\/
+                                    /^http(s?):\/\//.test(class_name)     //^[a-z+]:\/\/
                                   )
                                     ? class_name //classname is a url in this case
                                     : this.to_url( class_name )
@@ -69,12 +69,20 @@
 //                  LOAD_OPTION_1: {
 //                      eval( new Joose.SimpleRequest().getText( lib_url ) );
 //                  }
-
-                    LOAD_OPTION_2: {
-                        var source_code = new Joose.SimpleRequest().getText( lib_url );
+                    if ( this.is_same_domain( lib_url ) ) {
+                        LOAD_OPTION_2: {
+                            var source_code = new Joose.SimpleRequest().getText( lib_url );
+                            var script = document.createElement('script');
+                            script.type = "text/javascript";
+                            script.text = source_code;
+                            document.getElementsByTagName('head')[0].appendChild(script);
+                        }
+                    } else {
+                      //var source_code = new Joose.SimpleRequest().getText( lib_url );
                         var script = document.createElement('script');
                         script.type = "text/javascript";
-                        script.text = source_code;
+                        script.src = lib_url;
+                        script.onload = function () {  }
                         document.getElementsByTagName('head')[0].appendChild(script);
                     }
 
@@ -91,11 +99,18 @@
                 },
                 is_loaded : function ( lib_url ) {
                     return this.loaded_urls[ lib_url ];
+                },
+                is_same_domain : function (lib_url) { 
+                    var this_domain = window.location.origin;
+                    var rgx = new RegExp( '^' + this_domain, 'g' );
+                    var cond = !/^http/.test(lib_url) &&! rgx.test( lib_url );
+                    return cond;
                 }
             }
         } )
 
         window.jloader = new JooseLoader();
+//      jloader.load('https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js', { eval : false, block: true })
         jloader.load('MyApp')
 //      jloader.load('./js/handlebars-v3.0.0.js', { eval : false })
         var mybase = new MyApp({
