added type text/javascript

--- a/jsonp_loading_example1.html
+++ b/jsonp_loading_example1.html
@@ -1,8 +1,8 @@
 
 <html>
     <head>
-        <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js'></script>
-        <script src='https://raw.githubusercontent.com/hernan604/JooseLoader/master/js/joose.js'></script>
+        <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js' type="text/javascript"></script>
+        <script src='https://raw.githubusercontent.com/hernan604/JooseLoader/master/js/joose.js' type="text/javascript"></script>
     </head>
 
     <body>
@@ -10,6 +10,16 @@
         Example of multiple jsonp loading.
         <br>
         -- Hernan Lopes
+        <br>
+        <div class='implementation_1'>
+        </div>
+        <br>
+        <div class='implementation_2'>
+        </div>
+        <br>
+        <div class='implementation_3'>
+        </div>
+        <br>
 
         <script>
             var without_joose = (function () {
