--- a/jsonp_loading_example1.html
+++ b/jsonp_loading_example1.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js' type="text/javascript"></script>
-        <script src='https://raw.githubusercontent.com/hernan604/JooseLoader/master/js/joose.js' type="text/javascript"></script>
+        <script src='https://cdn.rawgit.com/hernan604/JooseLoader/master/js/joose.js' type="text/javascript"></script>
     </head>
 
     <body>
