--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
 
         <div class='area-login'></div>
         <div class='custom-class'></div>
-        <div class='slider-v1' data-images='["http://lorempixel.com/output/abstract-q-g-50-50-1.jpg","http://lorempixel.com/output/abstract-q-g-50-50-2.jpg","http://lorempixel.com/output/abstract-q-g-50-50-3.jpg","http://lorempixel.com/output/abstract-q-g-50-50-4.jpg","http://lorempixel.com/output/abstract-q-g-50-50-5.jpg","http://lorempixel.com/output/abstract-q-g-50-50-6.jpg"]' data-auto_start='true'></div>
+        <div class='slider-v1' data-images='["/img/img1.jpg","/img/img2.jpg","/img/img3.jpg"]' data-auto_start='true'></div>
         <div class='class-test2 um'></div>
         <div class='class-test2-other-selector dois'></div>
-        <div class='slider-v1' data-images='["http://lorempixel.com/output/technics-h-c-80-120-10.jpg","http://lorempixel.com/output/fashion-h-c-80-120-4.jpg","http://lorempixel.com/output/technics-h-c-80-120-7.jpg","http://lorempixel.com/output/abstract-h-c-80-120-2.jpg","http://lorempixel.com/output/nightlife-h-c-80-120-6.jpg"]' data-auto_start='false'></div>
+        <div class='slider-v1' data-images='["/img/img4.jpg","/img/img5.jpg","/img/img6.jpg","/img/img7.jpg"]' data-auto_start='false'></div>
         <div class='clock-v1'></div>
         <div class='video' data-embed='https://www.youtube.com/watch?v=EceaPCH2Zw0'></div>
         <div class='custom-class'></div>
